# dimity-jones-solutions

./: .gitignore  00.py  01.py  02.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  README.md  check.py  combine.py  pyproject.toml  requirements.txt
data/: .gitignore
decrypter/: __init__.py  vigenere_breaker.py
solutions/: 00.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  30.py  31.py  32.py  33.py  34.py  35.py  36.py  37.py  38.py  39.py  40.py  (+55 more)
tests/: test_decrypter.py  test_solutions.py
